--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -197,7 +197,7 @@
           <h4>Our Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#early-access-modal">Early Access</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Key Benefits</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Local Support</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#about">About Us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#contact">Get in Touch</a></li>
           </ul>
