--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -197,9 +197,11 @@
           <h4>Our Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#early-access-modal">Early Access</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Local Support</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#about">About Us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Get in Touch</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Local Expertise</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Simple and Intuitive</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Time-Saving</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Cost-Effective</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#benefits">Comprehensive Support</a></li>
           </ul>
         </div>
 
