Updated footer links in Our Solution section of index.html to match key benefits wording exactly

--- a/index.html
+++ b/index.html
@@ -233,10 +233,11 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Solution</h4>
           <ul>
-            <li><a href="#benefits">Manage Your Business in One Solution</a></li>
-            <li><a href="#benefits">Customizable Features</a></li>
-            <li><a href="#benefits">User-Friendly Interface</a></li>
-            <li><a href="#benefits">Local Support</a></li>
+            <li><a href="#benefits">Local Expertise</a></li>
+            <li><a href="#benefits">Simple and Intuitive</a></li>
+            <li><a href="#benefits">Time-Saving</a></li>
+            <li><a href="#benefits">Cost-Effective</a></li>
+            <li><a href="#benefits">Comprehensive Support</a></li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
