--- a/coming-soon.html
+++ b/coming-soon.html
@@ -125,4 +125,115 @@
   <script src="assets/js/main.js"></script>
 </body>
 
-</html> 
+</html>
+
+/* Hero Section Styles */
+.hero {
+  padding: 120px 0;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(135deg, #37517e 0%, #47b2e4 100%);
+  color: white;
+  position: relative;
+  overflow: hidden;
+}
+
+.hero h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+  line-height: 1.2;
+}
+
+.hero p {
+  font-size: 1.25rem;
+  margin-bottom: 2rem;
+  opacity: 0.9;
+}
+
+.hero-img {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-img img {
+  animation: float 6s ease-in-out infinite;
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.btn-get-started {
+  background: #47b2e4;
+  color: white;
+  padding: 12px 30px;
+  border-radius: 50px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.btn-get-started:hover {
+  background: #37517e;
+  color: white;
+  transform: translateY(-2px);
+}
+
+.btn-learn-more {
+  background: transparent;
+  color: white;
+  padding: 12px 30px;
+  border-radius: 50px;
+  font-weight: 600;
+  text-decoration: none;
+  border: 2px solid white;
+  transition: all 0.3s ease;
+}
+
+.btn-learn-more:hover {
+  background: white;
+  color: #37517e;
+  transform: translateY(-2px);
+}
+
+@media (max-width: 991px) {
+  .hero {
+    padding: 80px 0;
+    text-align: center;
+    min-height: auto;
+  }
+  
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+  
+  .hero p {
+    font-size: 1.1rem;
+  }
+  
+  .hero-img {
+    margin-bottom: 2rem;
+    height: auto;
+  }
+  
+  .d-flex {
+    justify-content: center;
+  }
+} 
