--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="ERP, Halifax, SMB, Business Software, MVP Program">
 
     <!-- Favicons -->
-    <link href="img/favicon.ico" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/favicon.ico" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/" rel="preconnect">
@@ -24,14 +24,14 @@
     <link href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body data-aos-easing="ease-in-out" data-aos-duration="600" data-aos-delay="0">
     <!-- Header -->
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
-                <img src="img/logo.png" alt="Simplify Solutions Logo">
+                <img src="assets/img/logo.png" alt="Simplify Solutions Logo">
             </a>
             <a class="btn-getstarted" href="home.html">View Full Website</a>
         </div>
@@ -50,7 +50,7 @@
                     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                         <div class="steps-item" style="background: #fff;">
                             <div class="steps-image">
-                                <img src="img/steps-1.webp" alt="Step 1" class="img-fluid" loading="lazy">
+                                <img src="assets/img/steps-1.webp" alt="Step 1" class="img-fluid" loading="lazy">
                             </div>
                             <div class="steps-content">
                                 <div class="steps-number" style="color: #47b2e4;">01</div>
@@ -77,7 +77,7 @@
                     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
                         <div class="steps-item" style="background: #fff;">
                             <div class="steps-image">
-                                <img src="img/steps-2.webp" alt="Step 2" class="img-fluid" loading="lazy">
+                                <img src="assets/img/steps-2.webp" alt="Step 2" class="img-fluid" loading="lazy">
                             </div>
                             <div class="steps-content">
                                 <div class="steps-number" style="color: #47b2e4;">02</div>
@@ -104,7 +104,7 @@
                     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
                         <div class="steps-item" style="background: #fff;">
                             <div class="steps-image">
-                                <img src="img/steps-3.webp" alt="Step 3" class="img-fluid" loading="lazy">
+                                <img src="assets/img/steps-3.webp" alt="Step 3" class="img-fluid" loading="lazy">
                             </div>
                             <div class="steps-content">
                                 <div class="steps-number" style="color: #47b2e4;">03</div>
@@ -339,7 +339,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
 
     <!-- Main JS File -->
-    <script src="js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
