--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
-                <img src="assets/img/logo.png" alt="Simplify Solutions Logo">
+                <img src="assets/img/logo.webp" alt="Simplify Solutions Logo">
             </a>
-            <a class="btn-getstarted" href="home.html">View Full Website</a>
         </div>
     </header>
 
@@ -50,7 +49,7 @@
                     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                         <div class="steps-item" style="background: #fff;">
                             <div class="steps-image">
-                                <img src="assets/img/steps-1.webp" alt="Step 1" class="img-fluid" loading="lazy">
+                                <img src="assets/img/steps/steps-1.webp" alt="Step 1" class="img-fluid" loading="lazy">
                             </div>
                             <div class="steps-content">
                                 <div class="steps-number" style="color: #47b2e4;">01</div>
@@ -77,7 +76,7 @@
                     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
                         <div class="steps-item" style="background: #fff;">
                             <div class="steps-image">
-                                <img src="assets/img/steps-2.webp" alt="Step 2" class="img-fluid" loading="lazy">
+                                <img src="assets/img/steps/steps-2.webp" alt="Step 2" class="img-fluid" loading="lazy">
                             </div>
                             <div class="steps-content">
                                 <div class="steps-number" style="color: #47b2e4;">02</div>
@@ -104,7 +103,7 @@
                     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
                         <div class="steps-item" style="background: #fff;">
                             <div class="steps-image">
-                                <img src="assets/img/steps-3.webp" alt="Step 3" class="img-fluid" loading="lazy">
+                                <img src="assets/img/steps/steps-3.webp" alt="Step 3" class="img-fluid" loading="lazy">
                             </div>
                             <div class="steps-content">
                                 <div class="steps-number" style="color: #47b2e4;">03</div>
