Fix: Updated logo to slogo.jpg and added padding to MVP section

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
-                <img src="assets/img/logo.webp" alt="Simplify Solutions Logo">
+                <img src="assets/img/slogo.jpg" alt="Simplify Solutions Logo">
             </a>
         </div>
     </header>
 
     <main class="main">
         <!-- MVP Section -->
-        <section id="starter-section" class="starter-section section">
+        <section id="starter-section" class="starter-section section" style="padding-top: 120px;">
             <div class="container aos-init aos-animate" data-aos="fade-up">
                 <div class="text-center mb-5">
                     <h2 style="color: #fff; font-size: 32px; font-weight: 700; margin-bottom: 20px;">MVP Program: Be Among the First to Shape the Future of ERP</h2>
